--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "0.6.1",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-less": "~0.11",
     "grunt-browserify": "~2.0",
     "load-grunt-tasks": "0.4.0"
   }
