--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "license": "MIT",
   "dependencies": {
     "baconjs": "0.7.8",
-    "bacon-jquery": "0.4.7",
     "browserify": "~3",
     "coffeeify": "~0.6",
-    "jquery": "~2"
+    "jquery": "~2",
+    "lodash": "2.4.1"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
