--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "description": "Bacon learning game",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node_modules/grunt-cli/bin/grunt build"
   },
   "author": "",
   "license": "MIT",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.4",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
@@ -23,6 +25,7 @@
     "grunt-contrib-copy": "0.5.0",
     "grunt-contrib-less": "~0.11",
     "grunt-browserify": "~2.0",
-    "load-grunt-tasks": "0.4.0"
+    "load-grunt-tasks": "0.4.0",
+    "express": "~3"
   }
 }
