--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "baconjs": "0.7.8",
+    "baconjs": "baconjs/bacon.js#231ede0",
     "browserify": "~3",
     "coffeeify": "~0.6",
     "jquery": "~2",
     "lodash": "2.4.1",
     "d3": "3.4.4",
+    "codemirror": "~4.7",
     "grunt": "~0.4.4",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-jshint": "~0.6.3",
